--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-      "php": ">=7.0.1";
+      "php": ">=7.0.1",
       "psr/log": "~1.0"
     },
     "autoload": {
