--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
 		"Seeren\\Log\\": "src/",
 		"Seeren\\Log\\Test\\": "test/"
       }
-  }
+   },
+    "require-dev": {
+        "phpunit/phpunit": "6.1"
+    }
 }
