--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "seeren/log",
-    "description": "Psr-3 implementation",
+    "description": "Log message and determine level",
+    "keywords": ["logger", "psr-3"],
     "type": "library",
     "license": "MIT",
     "authors": [
