--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
       }
     },
     "require-dev": {
-        "phpunit/phpunit": "6.1.*"
+        "phpunit/phpunit": "6.1.*",
+        "satooshi/php-coveralls": "dev-master"
     }
 }
