--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ before_script:
     - composer update
 
 script:
-    - phpunit
+    - vendor/bin/phpunit
+
+after_success:
+  - travis_retry php vendor/bin/coveralls
