--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
     - vendor/bin/phpunit
 
 after_success:
-  - travis_retry php vendor/bin/coveralls
+  - travis_retry php vendor/bin/coveralls --exclude-no-stmt
