--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,36 @@
 {
-    "name": "seeren/log",
-    "description": "Log message and determine level",
-    "keywords": ["psr-3", "logger", "loglevel"],
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-      {
-        "name": "Cyril Ichti",
-        "email": "consultant@seeren.fr",
-        "homepage" : "http://www.seeren.fr"
-      }
-    ],
-    "minimum-stability": "dev",
-    "require": {
-      "php": ">=7.0.1",
-      "psr/log": "~1.0"
-    },
-    "autoload": {
-      "psr-4": {
-		"Seeren\\Log\\": "src/"
-      }
-    },
-    "autoload-dev": {
-      "psr-4": {
-		"Seeren\\Log\\Test\\": "test/"
-      }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "6.1.*",
-        "satooshi/php-coveralls": "dev-master"
-    }
+	"name" : "seeren/log",
+	"description" : "Log message and determine level",
+	"keywords" : [
+		"psr-3",
+		"logger",
+		"loglevel"
+	],
+	"type" : "library",
+	"license" : "MIT",
+	"authors" : [{
+			"name" : "Cyril Ichti",
+			"email" : "consultant@seeren.fr",
+			"homepage" : "http://www.seeren.fr"
+		}
+	],
+	"minimum-stability" : "dev",
+	"require" : {
+		"php" : ">=7.0.1",
+		"psr/log" : "~1.0"
+	},
+	"autoload" : {
+		"psr-4" : {
+			"Seeren\\Log\\" : "src/"
+		}
+	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"Seeren\\Log\\Test\\" : "test/"
+		}
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "dev-master",
+		"satooshi/php-coveralls" : "dev-master"
+	}
 }
