--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
 	"description" : "Log message and determine level",
 	"keywords" : [
 		"psr-3",
-		"logger",
-		"loglevel"
+		"logger"
 	],
 	"type" : "library",
 	"license" : "MIT",
@@ -16,8 +15,7 @@
 	],
 	"minimum-stability" : "dev",
 	"require" : {
-		"php" : ">=7.0.1",
-		"psr/log" : "~1.0"
+		"php" : ">=7.2.0"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -30,7 +28,7 @@
 		}
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "dev-master",
-		"satooshi/php-coveralls" : "dev-master"
+		"phpunit/phpunit" : "7.0.2",
+		"satooshi/php-coveralls" : "2.0.0"
 	}
 }
