--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	],
 	"minimum-stability" : "dev",
 	"require" : {
-		"php" : ">=7.2.0"
+		"php" : ">=7.2.0",
+		"psr/log" : "1.0.2"
 	},
 	"autoload" : {
 		"psr-4" : {
