--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"minimum-stability" : "dev",
 	"require" : {
 		"php" : ">=7.2.0",
-		"psr/log" : "1.0.2"
+        "psr/log": "~1.0"
 	},
 	"autoload" : {
 		"psr-4" : {
