--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,20 @@
 	"name" : "seeren/log",
 	"description" : "Log message and determine level",
 	"keywords" : [
-		"psr-3",
-		"logger"
+		"logger",
+		"log-level",
+		"psr-3"
 	],
 	"type" : "library",
 	"license" : "MIT",
 	"authors" : [{
 			"name" : "Cyril Ichti",
 			"email" : "consultant@seeren.fr",
-			"homepage" : "http://www.seeren.fr"
+			"homepage" : "https://github.com/seeren/log"
 		}
 	],
-	"minimum-stability" : "dev",
 	"require" : {
-		"php" : ">=7.2.0",
+		"php" : ">=7.4.0",
         "psr/log": "~1.0"
 	},
 	"autoload" : {
@@ -29,7 +29,7 @@
 		}
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "7.0.2",
-		"satooshi/php-coveralls" : "2.0.0"
+		"phpunit/phpunit": "9.4.0",
+		"php-coveralls/php-coveralls": "v2.4.1"
 	}
 }
