--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,14 @@
 	"require-dev" : {
 		"phpunit/phpunit": "9.4.0",
 		"php-coveralls/php-coveralls": "v2.4.1"
+	},
+	"scripts": {
+		"post-install-cmd": [
+			"mkdir var",
+			"cd var",
+			"mkdir log",
+			"cd log",
+			"echo '' > .gitkeep"
+		]
 	}
 }
