--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
 		}
 	],
 	"require" : {
-		"php" : ">=7.4.0",
-        "psr/log": "~1.0"
+		"php" : ">=8.0.1",
+        "psr/log": "^2.0"
 	},
 	"autoload" : {
 		"psr-4" : {
@@ -29,7 +29,14 @@
 		}
 	},
 	"require-dev" : {
-		"phpunit/phpunit": "9.4.0",
-		"php-coveralls/php-coveralls": "v2.4.1"
+		"phpunit/phpunit": "^9.5",
+		"php-coveralls/php-coveralls": "^v2.5.2"
+	},
+	"scripts": {
+		"start": "php -S localhost:8000 -t public",
+		"test": [
+			"@putenv XDEBUG_MODE=coverage",
+			"phpunit --color=always --coverage-text"
+		]
 	}
 }
