--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
     - composer install
 
 script:
-    - composer run test:coverage
+    - composer run test
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls --exclude-no-stmt
